# mkdocs-toggle-sidebar-plugin

./: .gitignore  .todos  LICENSE  MANIFEST.in  README.md  build.sh  mkdocs.yml  mypy.ini  redirect.html  requirements.in  requirements.txt  serve.sh  setup.cfg  vercel.json
docs/: another-page.md  custom-js-test.js  index.md  javascript-functions.md  test-broken-iframe.md  third-page.md
src/mkdocs_toggle_sidebar_plugin/: __init__.py  material.js  mkdocs.js  plugin.py  readthedocs.js  toggle-sidebar.js
tests/blog/: mkdocs.yml
tests/blog/docs/: index.md
tests/blog/docs/posts/: blog.md
