[metadata]
name = mkdocs-toggle-sidebar-plugin
version = 0.0.6
author = six-two
author_email = pip@six-two.dev
description = Add keybindings to toggle the navigation and table of contents sidebars
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-toggle-sidebar-plugin
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
install_requires =
    mkdocs>=1.5.0  

[options.entry_points]
mkdocs.plugins =
    toggle-sidebar = mkdocs_toggle_sidebar_plugin:Plugin

[options.packages.find]
where = src
